# client

./: .editorconfig  .eslintignore  .eslintrc.cjs  .fpm  .gitignore  .gitmodules  .npmrc  .trivyignore  .trivyignore.yaml  .typesafe-i18n.json  LICENSE.md  README.md  biome.json  build-macos-package.sh  dg.service  flake.nix  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
src-cli/: Cargo.toml
src-tauri/: .env  .envrc  .gitignore  Cargo.toml  Client.appstore.entitlements  Client.developerid.entitlements  Client.entitlements  Defguard_Client_Mac_App_Store.provisionprofile  Defguard_Client_Mac_DeveloperID.provisionprofile  Defguard_VPNExtension_Mac_App_Store.provisionprofile  Defguard_VPNExtension_Mac_DeveloperID.provisionprofile  Info.plist  Installer.entitlements  build-macos-package.sh  build.rs  defguard.db  deny.toml  rust-toolchain.toml  tauri.app.conf.json  tauri.conf.json  tauri.dev.conf.json  tauri.developerid.conf.json  tauri.dmg.conf.json  tauri.linux.conf.json  tauri.local.conf.json  tauri.macos.conf.json  tauri.pkg.conf.json  tauri.windows.conf.json
src-tauri/.sqlx/: query-09eaf7503256da688c9eaeebb2b187d1b7d5692ce7e0ca467465e78f873e0901.json  query-0b161da55e36df9d0a10a52474a8cd49d4659d2d6faafdd2de0c985679d0703d.json  query-0b25022877adfb942f54ea5fdf05a7fc5c5885c9c6cbf9b3da24ee4f161792db.json  query-0cd5bcee4667ecabf1a0e5565563b2d015b07a5c0d8ff6465e055055bda60e93.json  query-0ee05c410f66269961ac5979a66ee4bbe8e710459f6b5ccc2186fb2423d8dbbe.json  query-0f592e9b8379a31fa318729bea4caed607c915644bc20d99fb2324961a0ee1a5.json  query-11701663c05b9e031fbe9e3fa56f455bd1815cd878a2016d236ae1cad2157e4d.json  query-11cf4e78002243610918571f79ead5f08daf083a59f77ba96f7642f545ce1d10.json  query-149bfe6602e397dc79a956f33e2373a6a3b08c8d615b404f9917c5158d4857dd.json  query-15653b6cff48d598efc8bf6b40ea414580a236b351ad7818ee75d7efe2833882.json  query-157a0344c45c1b0567e8815c3f7b3667b753fb0b4b4c10d9d497b8f403ccb89d.json  query-17a3b10441e63bde5b97c861747617eadddbc843e42545860afdd8ad6951b4ee.json  query-182ab8b6db5a145ebd17f7580d804a996c71e4545566671c48c3ffe986da3c33.json  query-19c18356163baa6db88272f09d83768b2658406575d325fb273f152fe15465c4.json  query-1c07ca7013959226ca9af064037bb64da07f7023f58ff8678d828a0ba50e2470.json  query-1c996712f62a1005990733cd9eee7a94bdcf2ef01b559304aea1d642fab7ae22.json  query-2045cc468f62e13183d98e60fb3878c3f3f0184bda80a8155d225d6245ed7f80.json  query-20a86d93affcb5ff2d820ed2a4fa8c2ccf1172c23bd791b39c5432ae63cdc6ae.json  query-22ff2d05c63b30b26cc1b805d18ecc020936bed6c6daea7aa1ac97200d73ceb5.json  query-2349ad064de3b3700fae42f06d62a5a0ecc552578b57c85d3c4689391765441d.json  query-23bea2347d2dbd9bda11f12183b294b465a5485b2c21a9940b7fd0970f159470.json  query-2519ee530137aff4f6d567cfd0732227ab0ed2df1a05397890de3a55d62d27ab.json  query-25e253a71c188be173e3dce3c640e3028e88be06d10c112e4b4a16b1599f8657.json  query-288899ef3160db5fba8a2e91a2580803a080daea4ab09cc67e7a492a5b3b2d3d.json  query-28f4b0e085be4d942914fb29d2d40193e805181dea44ace9b2f3236306ca33a8.json  query-294b2d391d5cf01a2e756ae357869b9fb274d4254b479816b3892c9593f76b13.json  query-2a51d1e1d05c0c061cc9c4a40ff502c6632dd0669a8c27f5c4ba18ffefc190d7.json  query-2b44824ac6c67806d5c732b37e991ddb90cd493ddf9e740bee53afe87a8f39b4.json  query-2cac428e1501aaadd8caa5c5491af8a6629d1e9034aa8f863cf68bbc29dcb79d.json  query-2d00e6f5a32e99722c0a20481612d4789c77bd3b8f079ed534b3bb38131ac894.json  query-2d0bcf92277e9a28d1b7732bd032cbbac0b5e5d916877eeb810df275488743b2.json  query-2d4e1873d7a9233ab5cad9021b230a898623b953ad721dcb42023729aed0e4a3.json  query-2d6a90bf82aa92118b36d90bf16ae9515952d077106d303f398167caf68a8a70.json  query-2d9b3c0595f2d385336d0a86cfdae1a4c327622977707117bf88b6a43e9e8f96.json  query-2d9b8eebfbc2651ae0038f73d5867706509a45ca570ebe750c6e26ec3fc78dd8.json  query-2e752bd9e60b5ddd0c9eeeabb6cbb5148296157f00ef39610c18fc290da384bf.json  query-2fecdb6bd008790da557f2ad050d84ec7803dd0e9db5b7326a67b864d1f47410.json  query-30181be5c9c6c5347de3d300ffba0732064face52dbebc0f5679af357c262a98.json  query-316027d32ca60c19ab2d5327bdd5cd679868f4796d948b8bf705accf0b912737.json  query-31cce786a98f42f93bef6beb172aff153682182940f382d977a59ebf8cf7def0.json  (+214 more)
src-tauri/capabilities/: default.json  zustand.json
src-tauri/cli/: .env  Cargo.toml  build.rs
src-tauri/client-cli/: Cargo.toml  Info.plist  build.rs  sign-helper.sh
src-tauri/client-cli/assets/: logo-color.ansi  (+1 more)
src-tauri/client-proto/: Cargo.toml  build.rs
src-tauri/common/: Cargo.toml  build.rs
src-tauri/core/: Cargo.toml
src-tauri/daemon/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20230913070656_initial.sql  20231127095924_add_routing.sql  20231129090428_add_stats_index.sql  20231212110739_add_settings.sql  20231212122824_update_location_stats.sql  20231219114309_add_cascade_delete.sql  20231221100546_create_tunnel.sql  20231228102040_add_more_instance_info.sql  20240115212308_add_settings_check_for_updates.sql  20240418065649_add_tunnel_preshared_key.sql  20240717141723_add_selected_view_column.sql  20240828072527_add_polling_token.sql  20240909092543_add_disable_route_all_traffic.sql  20240912084922_add_enterprise_enabled_flag.sql  20241118154652_remove_settings.sql  20250623083017_openid_mfa.sql  20250716095940_add_location_mfa_settings.sql  20251009102408_service_locations.sql  20251117093105_force_all_traffic.sql  20260511093103_posture_check_required.sql  20260513120000_add_location_mfa_method.sql
src-tauri/permissions/: default.toml
src-tauri/posture/: Cargo.toml
src-tauri/resources-windows/: defguard-client.wxs  main.wxs  service-fragment.wxs
src-tauri/src/: active_connections.rs  app_config.rs  apple.rs  appstate.rs  cli.rs  commands.rs  connection.rs  database.rs  error.rs  events.rs  export.rs  global_log_watcher.rs  instance.rs  latest_app_version.rs  lib.rs  location.rs  main.rs  named_pipe.rs  proto.rs  provisioning.rs  service.rs  session_state.rs  system_extension.rs  tray.rs  utils.rs  wg_config.rs  window.rs  wireguard.rs
(+934 files in other folders)
