[package]
name = "defguard-client-cli"
version = "0.4.0"
description = "Defguard CLI client"
license = ""
homepage = "https://github.com/DefGuard/client"
repository = "https://github.com/DefGuard/client"
default-run = "defguard-client-cli"
edition = "2021"
rust-version = "1.60"
authors = ["Defguard"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
defguard_wireguard_rs = { git = "https://github.com/DefGuard/wireguard-rs.git", rev = "v0.4.5" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "chrono",
    "sqlite",
    "runtime-tokio",
    "uuid",
    "macros",
] }
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7"
tonic = "0.10"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.34", features = ["full"] }