[workspace]
members = ["cli", "client-cli", "common", "client-proto", "core", "daemon", "enterprise/posture", "enterprise/provisioning", "enterprise/config-sync", "enterprise/service-locations"]
default-members = [".", "cli", "client-cli", "daemon"]

[workspace.dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
defguard_wireguard_rs = "0.9"
dirs-next = "2.0"
log = { version = "0.4", features = ["serde"] }
prost = "0.14"
reqwest = { version = "0.13", features = ["cookies", "json"] }
secrecy = "0.10"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
sqlx = { version = "0.8", features = ["chrono", "runtime-tokio", "sqlite", "uuid", "macros"] }
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.14", default-features = false, features = [
    "codegen",
    "gzip",
    "router",
    "tls-native-roots",
    "tls-ring",
    "transport",
] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tempfile = "3"
http = "1"
vergen-git2 = { version = "9.1", features = ["build"] }

[workspace.package]
authors = ["Defguard"]
edition = "2021"
homepage = "https://github.com/DefGuard/client"
license-file = "../LICENSE.md"
rust-version = "1.95"
version = "2.1.0"

[package]
name = "defguard-client"
description = "Defguard desktop client"
repository = "https://github.com/DefGuard/client"
default-run = "defguard-client"
autobins = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "defguard-client"

[build-dependencies]
tauri-build = { version = "2", features = [] }
vergen-git2.workspace = true

[dependencies]
anyhow = "1.0"
base64.workspace = true
clap.workspace = true
chrono = { version = "0.4", features = ["serde"] }
defguard-client-proto = { path = "client-proto" }
defguard-client-core = { path = "core" }
defguard-client-posture = { path = "enterprise/posture" }
defguard-client-config-sync = { path = "enterprise/config-sync" }
defguard-client-service-locations = { path = "enterprise/service-locations" }
defguard-client-provisioning = { path = "enterprise/provisioning" }
defguard-client-common = { path = "common" }
dark-light = "2.0"
defguard_wireguard_rs = { workspace = true, features = ["check_dependencies"] }
dirs-next.workspace = true
hyper-util = "0.1"
log.workspace = true
os_info = { version = "3.14", default-features = false }
prost.workspace = true
regex = "1.12"
reqwest.workspace = true
rust-ini = "0.21"
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sqlx.workspace = true
struct-patch = "0.12"
strum = { version = "0.28", features = ["derive"] }
sysinfo = { version = "0.39", default-features = false, features = ["apple-app-store", "system"] }
tauri = { version = "2", features = [
    "native-tls-vendored",
    "image-png",
    "tray-icon",
] }
# Must match Tauri plugins in package.json.
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers", "native-tls"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-window-state = "2"
tauri-plugin-zustand = "1"
thiserror.workspace = true
time = { version = "0.3", features = ["formatting", "macros"] }
tokio.workspace = true
tokio-util = "0.7"
tonic.workspace = true
tonic-prost.workspace = true
tower = "0.5"
tracing.workspace = true
tracing-appender = "0.2"
tracing-subscriber.workspace = true
webbrowser = "1.0"
x25519-dalek = { version = "2", features = [
    "getrandom",
    "serde",
    "static_secrets",
] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
objc2-network-extension = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["user", "fs"] }
tokio-stream = "0.1"

[target.'cfg(windows)'.dependencies]
async-stream = "0.3"
futures-core = "0.3"
known-folders = "1.3"
windows = { version = "0.62", features = [
    "Win32",
    "Win32_System",
    "Win32_System_RemoteDesktop",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_Foundation",
] }
windows-acl = "0.3"
windows-service = "0.8"
windows-sys = { version = "0.61", features = [
    # Core Win32 types
    "Win32_Foundation",

    # Security descriptors, ACLs, SDDL
    "Win32_Security",
    "Win32_Security_Authorization",

    # Named pipes (CreateNamedPipeW)
    "Win32_System_Pipes",

    # HANDLE & file functions
    "Win32_System_IO",
    "Win32_System_Threading",

    # Network address change notifications (NotifyAddrChange)
    "Win32_NetworkManagement_IpHelper",
] }
wmi = {version = "0.18", default-features = false}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
