[package]
name = "defguard-dg"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
rust-version.workspace = true
version.workspace = true

[build-dependencies]
prost-build = "0.13"

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
common = { path = "../common" }
defguard_wireguard_rs = { workspace = true }
dirs-next = "2.0"
prost = "0.13"
reqwest = { version = "0.12", features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
x25519-dalek = { version = "2", features = [
  "getrandom",
  "serde",
  "static_secrets",
] }

# Dummy feature to let tauri build the release.
[features]
custom-protocol = []
