[package]
name = "defguard-client-proto"
description = "Protobuf definitions for the Defguard desktop client"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file = "../../LICENSE.md"
rust-version.workspace = true
version.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[dependencies]
prost.workspace = true
serde.workspace = true
serde_with = "3.11"
tonic.workspace = true
tonic-prost.workspace = true

defguard_wireguard_rs.workspace = true

[target.'cfg(windows)'.dependencies]
wmi = { version = "0.18", default-features = false }

[dev-dependencies]
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets"] }
