[package]
name = "defguard-client-common"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]

[build-dependencies]
vergen-git2.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["net"] }
