[package]
name = "defguard-client-core"
description = "Shared business logic for the Defguard desktop client (Tauri-free)"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file = "../../LICENSE.md"
rust-version.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
common = { path = "../common" }
defguard-client-proto = { path = "../client-proto" }
defguard_wireguard_rs.workspace = true
dirs-next.workspace = true
log = { version = "0.4", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
serde_with = "3.11"
x25519-dalek = { version = "2", features = ["getrandom", "serde", "static_secrets"] }
sqlx = { version = "0.8", features = [
    "chrono",
    "sqlite",
    "runtime-tokio",
    "uuid",
    "macros",
] }
strum = { version = "0.28", features = ["derive"] }
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["user", "fs"] }
