[package]
name = "defguard-posture"
description = "Device posture checks for the Defguard desktop client"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file = "../LICENSE.md"
rust-version.workspace = true
version.workspace = true

[dependencies]
defguard-client-core = { path = "../../core" }
defguard-client-proto = { path = "../../client-proto" }
log = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
sysinfo = { version = "0.39", default-features = false, features = ["system"] }

[target.'cfg(target_os = "macos")'.dependencies]
sysinfo = { version = "0.39", default-features = false, features = ["system"] }

[target.'cfg(windows)'.dependencies]
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
