[package]
name = "defguard-client-posture"
description = "Device posture checks for the Defguard desktop client"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file = "../LICENSE.md"
rust-version.workspace = true
version.workspace = true

[dependencies]
defguard-client-core = { path = "../../core" }
defguard-client-proto = { path = "../../client-proto" }
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
sysinfo = { version = "0.39", default-features = false, features = ["system"] }

[target.'cfg(target_os = "macos")'.dependencies]
sysinfo = { version = "0.39", default-features = false, features = ["system"] }

[target.'cfg(windows)'.dependencies]
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
