[package]
name = "defguard-client-posture"
description = "Device posture checks for the Defguard desktop client"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license = "LicenseRef-Proprietary"
rust-version.workspace = true
version.workspace = true

[dependencies]
defguard-client-core = { path = "../../core" }
defguard-client-proto = { path = "../../client-proto" }
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
sysinfo = { version = "0.39", default-features = false, features = ["system"] }

[target.'cfg(target_os = "macos")'.dependencies]
sysinfo = { version = "0.39", default-features = false, features = ["system"] }

[target.'cfg(windows)'.dependencies]
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
time = { version = "0.3", features = ["formatting", "macros"] }
wmi = { version = "0.18", default-features = false }
