[package]
name = "defguard-service-locations"
description = "Service location management for the Defguard client daemon"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file = "../LICENSE.md"
rust-version.workspace = true
version.workspace = true

[dependencies]
common = { path = "../../common" }
defguard-client-core = { path = "../../core" }
defguard-client-proto = { path = "../../client-proto" }
defguard_wireguard_rs = { workspace = true }
base64 = "0.22"
log = { version = "0.4", features = ["serde"] }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
known-folders = "1.4"
windows = "0.62"
windows-acl = "0.3"
windows-service = "0.8"
windows-sys = "0.61"
